# physics_test_v4

./: .gitignore  CMakeLists.txt  README.md  RigidBodyPhysics.java  file.py  file_tree.md
docs/: 00_概述与架构.md  01_数据结构定义.md  02_速度积分与力.md  03_碰撞检测_GJK.md  04_碰撞检测_EPA.md  05_接触流形生成.md  06_约束求解器.md  07_接触约束与摩擦.md  08_主循环与位置修正.md  09_仿写指南与简化策略.md  ChatGPT-物理模拟项目分析.json  null_v4_assessment.md  null_v4_notes.md  合成.md  备忘.md
docs/ragdoll/: 01_概述与文件地图.md  02_骨骼与姿态系统.md  03_布娃娃配置与稳定化.md  04_SwingTwist约束详解.md  05_运行时与驱动模式.md  06_骨骼映射与仿写指南.md  布娃娃调查.md
src/: common.h  main.cpp  physics_api.h  physics_jolt.cpp  physics_null_v1.cpp  physics_null_v2.cpp  physics_null_v3.1.cpp  physics_null_v3.cpp  physics_null_v4.cpp  physics_null_v4_dropin_over_v3.cpp  renderer.cpp  renderer.h  scenes.cpp  scenes.h  world.cpp  world.h
